# PFASProphet

./: .gitignore  LICENSE  README.md  pyproject.toml
src/PFASProphet/: .gitignore  __init__.py  cli.py  commons.py  model.model  predictor.py
tests/: Scratchpad.py  example_compounds_to_process.csv  examples_for_users.py
