[project]
name = "PFASProphet"
version = "0.1.0"
description = "A short description of your package"
authors = [{ name = "Mathieu Feraud", email = "mathieu.feraud@uq.edu.au" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "pandas == 2.3.3",
    "numpy == 2.4.1",
    "joblib == 1.5.3",
    "lightgbm == 4.6.0",
    "scikit-learn == 1.4.2",
    "pydantic == 2.12.5",
]

[project.optional-dependencies]
test = ["pytest >= 8.0.0"]

[project.scripts]
pfasprophet = "PFASProphet.cli:main" 

[project.urls]
Homepage = ""
"Bug Tracker" = "github.com/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/PFASProphet"]
include = ["*.model",]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

